Fix spacing a bit

--- a/public/css/light.scss
+++ b/public/css/light.scss
@@ -959,11 +959,12 @@ tr.table-warning:hover > td {
 	z-index: 1000;
 }
 
-.score-box {
-}
-
 .score-box-deadline {
 	height: 92px;
+}
+
+.score-box-all-star {
+	height: 46px;
 }
 
 .score-box-score {
